tests/snapshots/examples_basics/list_basic.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/list_basic.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `rest`.

  examples/basics/list_basic.flx:34:11
   |
34 |     print(rest(to_list(my_array)));
   |           ^^^^

Hint:
  Define it first: let rest = ...;


error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/basics/list_basic.flx:40:11
   |
40 |     print(first(xs))
   |           ^^^^^

Hint:
  Define it first: let first = ...;


error[E004]: Undefined Variable

I can't find a value named `rest`.

  examples/basics/list_basic.flx:41:11
   |
41 |     print(rest(xs))
   |           ^^^^

Hint:
  Define it first: let rest = ...;

Found 3 errors.
== stdout ==
<not executed>
